@@ -375,6 +375,19 @@
 </tr>
 </table>
 
+<h4>Rename errno to error_number</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">rename</td>
+	<td class="tdchange">
+		<ul>
+			<li>.components.schemas."dbv0.0.38_error".properties.errnum</li>
+			<li>.components.schemas."dbv0.0.38_error".properties.error_number</li>
+		</ul>
+	</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.35 (src/plugins/openapi/v0.0.35/openapi.json)</h3>
 
 <h4>Removal notice</h4>
