@@ -108,6 +108,8 @@ documents those changes that are of interest to users and administrators.
  -- openapi/dbv0.0.38 - split security entries in openapi.json.
  -- openapi/v0.0.38 - Add schema for Slurm meta in responses.
  -- openapi/dbv0.0.38 - Add schema for Slurm meta in responses.
+ -- openapi/v0.0.38 - Correct field "errno" to "error_number" in schema for
+    errors.
 
 * Changes in Slurm 21.08.7
 ==========================
